--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   page_transition: ^2.1.0
   responsive_sizer: ^3.3.1
   google_fonts: ^6.2.1
+  video_player: ^2.9.1
 
 dev_dependencies:
   flutter_test:
